[package]
name = "party-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["tokio"] }
chrono = "0.4.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.28", features = ["full"] }

[dev-dependencies]
hyper = "0.14"
tower = { version = "0.4", features = ["util"] }
