[package]
name = "party-api"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.38", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["auth", "cors", "validate-request"] }
tower_governor = "0.4"

[dev-dependencies]
http-body-util = "0.1.2"
hyper = "1.3"
tower = { version = "0.4", features = ["util"] }
